master - fixed contact card alignment - removed console log

--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -51,9 +51,12 @@
     .contact-card {
       @include card;
       display: grid;
+      grid-template-columns: auto 1fr 1fr;
       grid-template-areas: 
       "icon label label"
       "icon detail detail";
+
+      gap: 10px;
 
       .add-label {
         grid-area: label;
